# vPIN

./: README.md  auto_setup.sh  requirements.txt  script.sh
src/LeNet/: Client.py  Server.py
src/LeNet/Pre_trained_model/: bias_fc1_84.npy  weight_fc1_120_84.npy  weight_fc2_84_10.npy
src/Pre_computed_table/: baby-step-giant-step.py
src/accuracy/: train_test_lenet5.py
src/cnn_networks/: Client.py  Server.py
src/cnn_networks/Pre_computed_table/: baby-step-giant-step.py
src/cnn_networks/Pre_trained_model/: bias_fc1_16.npy  bias_fc1_32.npy  bias_fc1_64.npy  bias_fc2_10.npy  weight_fc1_256_16.npy  weight_fc1_256_32.npy  weight_fc1_256_64.npy  weight_fc1_64_16.npy  weight_fc1_64_32.npy  weight_fc2_16_10.npy  weight_fc2_32_10.npy  weight_fc2_64_10.npy
src/convolution/: Client.py  Server.py  image_mnist_128_128.npy  image_mnist_256_256.npy  image_mnist_32_32.npy  image_mnist_64_64.npy
src/proof_generation/Spartan/src/: commitments.rs  dense_mlpoly.rs  errors.rs  group.rs  lib.rs  r1csinstance.rs  r1csproof.rs  random.rs  sparse_mlpoly.rs  timer.rs  transcript.rs
src/proof_generation/vPIN_proof_generation/src/: commit_test.rs  load_data.rs  load_data_add.rs  main.rs  point_addition.rs  point_mult.rs  (+2 more)
src/rust_files/pointAdd/: point_add_px_byte.json  point_add_py_byte.json  point_add_rx_byte.json  point_add_ry_byte.json  point_add_rz_byte.json
src/rust_files/pointMult/: point_mult_px_byte.json  point_mult_py_byte.json  weight.json
src/vPIN_proof_generation/: Cargo.toml
src/vPIN_proof_generation/src/: load_data.rs  point_addition.rs  point_mult.rs
(+2 files in other folders)
