[package]
name = "vPIN"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spartan = { path = "../Spartan", features = ["multicore"] }
curve25519-dalek = { version = "3.2.0", features = [
    "serde",
    "u64_backend",
    "alloc",
], default-features = false }
merlin = { version = "3.0.0", default-features = false }
rand = { version = "0.7.3", features = ["getrandom"], default-features = false }
sys-info = "0.9"
uint = "0.9.5"
num = "0.4"
bincode ="1.3.3"
serde = "1.0.164"
serde_json = "1.0.96"
